# QuantTradingSystem

./: .gitignore  CMakeLists.txt  Config.ini  Readme.md
app/: main.cpp
include/core/: Backtester.h  MarketData.cpp  MarketData.h  Metrics.h  Optimizer.h  Report.h  Strategy.h
include/portfolio/: Portfolio.h
include/strategy/: BollingerBandStrategy.h  Movingaveragestrategy.h  RSIStrategy.h
include/utils/: Config.h  logger.h
src/core/: Backtester.cpp  MarketData.cpp  Metrics.cpp  Optimizer.cpp  Report.cpp
src/portfolio/: Portfolio.cpp
src/strategy/: BollingerBandStrategy.cpp  MovingAverageStrategy.cpp  RSIStrategy.cpp
src/utils/: Config.cpp  logger.cpp
